testdata/baselines/reference/submodule/compiler/parameterReferenceInInitializer1.errors.txt
parameterReferenceInInitializer1.ts(2,5): error TS2322: Type 'undefined' is not assignable to type 'a'.


==== parameterReferenceInInitializer1.ts (1 errors) ====
    function fn<a>(y: Y, set: (y: Y, x: number) => void): a {
        return undefined;
        ~~~~~~
!!! error TS2322: Type 'undefined' is not assignable to type 'a'.
    }
    interface Y { x: number }
    
    class C {
        constructor(
            y: Y,
            public x = fn(y, (y, x) => y.x = x) // expected to work, but actually doesn't
        ) {
        }
    }